--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "InSyncLearn",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.jpeg",
