improved logo and styling

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/Logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.jpeg",
+      "image": "./assets/Logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#FFF"
     },
