--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.5.1",
-    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-community/viewpager": "5.0.11",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~50.0.4",
+    "expo": "^50.0.0",
     "expo-document-picker": "~11.10.1",
-    "expo-firebase-analytics": "^8.0.0",
+    "expo-firebase-analytics": "^4.1.0",
     "expo-firebase-auth": "^2.0.0",
     "expo-firebase-crashlytics": "^2.0.0",
     "expo-firebase-database": "^2.0.0",
@@ -39,13 +39,13 @@
     "react-native-app-auth": "^7.1.0",
     "react-native-document-picker": "^9.1.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.14.1",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-drive-api-wrapper": "^1.4.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0"
