--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@firebase/auth": "^1.5.1",
     "@react-native-community/viewpager": "5.0.11",
+    "@react-native-firebase/app": "^18.8.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@supabase/supabase-js": "^2.39.3",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.0",
     "expo-document-picker": "~11.10.1",
@@ -32,12 +35,14 @@
     "expo-firebase-remote-config": "^2.0.0",
     "expo-firebase-storage": "^2.0.0",
     "expo-react-native-adapter": "^3.0.1",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-app-auth": "^7.1.0",
     "react-native-document-picker": "^9.1.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-drive-api-wrapper": "^1.4.0",
