--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,6 +43,9 @@ target 'InSyncLearn' do
   use_expo_modules!
   config = use_native_modules!
 
+  pod 'Firebase/Core'
+  pod 'Firebase/Analytics'
+
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
 
