--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ node_modules/
 .expo/
 dist/
 web-build/
+ios/
+android/
 
 # Native
 *.orig.*
@@ -66,6 +68,8 @@ yarn-error.*
 # macOS
 .DS_Store
 *.pem
+ios/
+android/
 
 # local env files
 .env*.local
@@ -74,3 +78,7 @@ yarn-error.*
 *.tsbuildinfo
 
 # @end expo-cli
+# Expo
+.expo
+dist/
+web-build/
