--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-firebase-performance": "^2.0.0",
     "expo-firebase-remote-config": "^2.0.0",
     "expo-firebase-storage": "^2.0.0",
+    "expo-font": "~11.10.2",
+    "expo-linear-gradient": "~12.7.1",
     "expo-react-native-adapter": "^3.0.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
